[tool.poetry]
name = "learning-python"
version = "0.1.0"
description = "salutare si bine te-am gasit"
authors = ["alexzanderr <alexxander18360@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
